package ar.edu.uch.tpfinal.cafe.bebida;

/** Patron DECORATOR - ConcreteComponent. */
public class Americano extends BebidaBase {
    public Americano() {
        super("Cafe Americano", 1400);
    }
}
