package ar.edu.uch.tpfinal.cafe.bebida;

/** Patron DECORATOR - ConcreteComponent. */
public class Capuchino extends BebidaBase {
    public Capuchino() {
        super("Capuchino", 1900);
    }
}
