package ar.edu.uch.tpfinal.cafe.bebida;

/** Patron DECORATOR - ConcreteComponent. */
public class Espresso extends BebidaBase {
    public Espresso() {
        super("Espresso", 1200);
    }
}
