package ar.edu.uch.tpfinal.cafe.bebida;

/** Patron DECORATOR - ConcreteComponent. */
public class Latte extends BebidaBase {
    public Latte() {
        super("Latte", 1800);
    }
}
