package ar.edu.uch.tpfinal.cafe.bebida;

/** Patron DECORATOR - ConcreteComponent. */
public class TeChai extends BebidaBase {
    public TeChai() {
        super("Te Chai", 1600);
    }
}
